--- a/causes.html
+++ b/causes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solutions</title>
+    <title>Causes - We're Heating Up</title>
     <link rel="stylesheet" href="causes.css">
     <link rel="icon" href="logo.png">
 </head>
@@ -15,8 +15,23 @@
         <a href = "quiz.html" target = "_blank"><div class = "buttons">Quiz</div></a>
     </nav>
     <div id="actualpage">
-        <h1 id="quiztitle">Causes of Global Warming</h1>
-        <h2 id="quizdesc">Why is our world heating up?</h2>
+        <div id="textboxes">
+            <h1 id="causestitle">Causes of Global Warming</h1>
+            <h2 id="causessubtitle">Why is our world heating up?</h2>
+        </div>
+        <p>Our green Earth is heating up as we speak, for many different reasons, but primarily because of us humans and our activities that affect the environment, and could lead to catastrophic consequences. Some of these activities that heat up our environment are:</p>
+        <h2>Burning of fossil fuels</h2>
+        <div id="image1">
+            <img id="fumesimage"src="airplanefumes.avif">
+            <p id="imagedescription1">An image of an airplane and it's fumes</p>
+        </div>
+        <p>Fumes ans gases are the primary reasons why our world is being destroyed. Whenever we burn things like coal, oil, or gas, they release gases like methane or carbon dioxide that go into the atmosphere and trap heat, heating up our planet. These gases are also released when we drive cars, fly planes, industrialize, etc. These gases also contribute to destruction of our Ozone Layer, which prevents the sun's ultraviolet rays from getting in.</p>
+        <h2>Natural occurences</h2>
+        <div id="image2">
+            <img id="sunimage" src="oursun.jpg">
+            <p id="image2description">An image of our Sun</p>
+        </div>
+        <p>While global warming is mostly caused by industrial means, it is also partially caused by shifts in nature and the environment itself. Such shifts that contribute to global warming include weather patterns, volcanic activity, the Sun's activity, etc.</p>
     </div>
 </body>
 </html>
