--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <nav>
-        <a href = "index.html"><img src = "logo.png" width = "150px" height = "150px" id = "logo"></a>
-        <a href = "causes.html"><div class = "buttons">Causes</div></a>
-        <a href = "solutions.html"><div class = "buttons">Solutions</div></a>
+        <a href = "index.html" target = "_blank"><img src = "logo.png" width = "150px" height = "150px" id = "logo"></a>
+        <a href = "causes.html" target = "_blank"><div class = "buttons">Causes</div></a>
+        <a href = "solutions.html" target = "_blank"><div class = "buttons">Solutions</div></a>
         <a href = "quiz.html" target = "_blank"><div class = "buttons">Quiz</div></a>
     </nav>
     <br>
@@ -20,7 +20,15 @@
     <br>
 
     <h1>WHAT IS GLOBAL WARMING?</h1>
-
+    <br>
+    <br>
+    <h2>Global Warming is the increase in Earth's temperature over the course of many centuries</h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 <div class="slideshow-container">
 
     <div class="mySlides fade">
