--- a/solutions.html
+++ b/solutions.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solutions</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "solutions.css">
 </head>
 <body>
     <nav>
-        <a href = "index.html"><img src = "logo.png" width = "150px" height = "150px" id = "logo"></a>
-        <a href = "causes.html"><div class = "buttons">Causes</div></a>
-        <a href = "solutions.html"><div class = "buttons">Solutions</div></a>
+        <a href = "index.html" target = "_blank"><img src = "logo.png" width = "150px" height = "150px" id = "logo"></a>
+        <a href = "causes.html" target = "_blank"><div class = "buttons">Causes</div></a>
+        <a href = "solutions.html" target = "_blank"><div class = "buttons">Solutions</div></a>
         <a href = "quiz.html" target = "_blank"><div class = "buttons">Quiz</div></a>
     </nav>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1>What are some solutions to global warming?</h1>
+    <h2>Although it will be difficult to revert the effects of global warming, there are ways we can limit it.</h2>
+    <ul>
+         <li>Reducing Greenhouse Gas Emissions</li>
+        <p>By shifting gears to electric vehicles, limiting energy usage, and utilizing renewable energy can help reduce greenhouse gases.</p>
+        <li>Protecting land and agriculture</li>
+        <p>By planting trees and banning deforestation, we can absorb more air from the atmosphere. We can promote healthy agriculture habits for farmers and protect ecosystems.</p>
+        <li>Even changing our everyday behavior can benefit the cause.</li>
+        <p>We must make sure we ride our bicycles more often, turn the lights off when we aren't in the room, and recycling materials all contribute to fighting global warming.</p>
+    </ul>
 </body>
 </html>
