--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <nav>
-        <a href = "index.html" target = "_blank"><img src = "logo.png" width = "150px" height = "150px" id = "logo"></a>
-        <a href = "causes.html" target = "_blank"><div class = "buttons">Causes</div></a>
-        <a href = "solutions.html" target = "_blank"><div class = "buttons">Solutions</div></a>
-        <a href = "quiz.html" target = "_blank"><div class = "buttons">Quiz</div></a>
+        <a href = "index.html"><img src = "logo.png" width = "150px" height = "150px" id = "logo"></a>
+        <a href = "causes.html"><div class = "buttons">Causes</div></a>
+        <a href = "solutions.html"><div class = "buttons">Solutions</div></a>
+        <a href = "quiz.html"><div class = "buttons">Quiz</div></a>
     </nav>
     <br>
     <br>
