--- a/quiz.html
+++ b/quiz.html
@@ -11,9 +11,9 @@
 <body>
     <nav>
         <a href = "index.html"><img src = "logo.png" width = "150px" height = "150px" id = "logo"></a>
-        <a href = "causes.html"><div class = "buttons" target = "_blank">Causes</div></a>
-        <a href = "solutions.html"><div class = "buttons" target = "_blank">Solutions</div></a>
-        <a href = "quiz.html" target = "_blank"><div class = "buttons">Quiz</div></a>
+        <a href = "causes.html"><div class = "buttons">Causes</div></a>
+        <a href = "solutions.html"><div class = "buttons">Solutions</div></a>
+        <a href = "quiz.html" ><div class = "buttons">Quiz</div></a>
     </nav>
     <div id="actualpage">
         <div id="textboxes">
